--- a/flink-notes/Apache-Flink-零基础入门/4.状态管理.md
+++ b/flink-notes/Apache-Flink-零基础入门/4.状态管理.md
@@ -117,3 +117,6 @@ Managed State 分为两种，一种是 **Keyed State**；另外一种是 **Opera
 - 示例参考 `org.apache.flink.streaming.examples.statemachine.StateMachineExample`
 ### Raw State
 
+# 参考
+- `org.apache.flink.streaming.connectors.kafka.FlinkKafkaConsumerBase#unionOffsetStates`
+
