--- a/flink-notes/0-笔记声明.md
+++ b/flink-notes/0-笔记声明.md
@@ -1,4 +1,4 @@
-
+flink，flink 入门，flink learning
 # 版本
 - Flink 1.9.1
 - JDK 1.8
@@ -7,9 +7,13 @@
 - Intellij Idea 2019.2.4
 
 # 源码
-该笔记内容&源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
+该笔记内容&源码与 
 
-# 参考
+# 同步更新
+[github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes)
+[blog/flink-advanced专栏](https://blog.csdn.net/u011278496/article/category/9489057)
+
+# 主要参考
 - [flink 官方](https://flink.apache.org/)
 - [flink-docs-release-1.9](https://ci.apache.org/projects/flink/flink-docs-release-1.9/)
 - <<Fink原理、实战与性能优化>> 作者: 张利兵 著
