--- a/flink-notes/1.1-Flink概念：运行环境.md
+++ b/flink-notes/1.1-Flink概念：运行环境.md
@@ -1,3 +1,12 @@
+目录结构
+=================
+
+   * [任务和算子链](#任务和算子链)
+   * [Job Managers、Task Managers、客户端（Clients）](#job-managerstask-managers客户端clients)
+   * [Task Slots 和资源](#task-slots-和资源)
+   * [State Backends](#state-backends)
+   * [Savepoints](#savepoints)
+   
 本内容主要参考 [flink-runtime](https://ci.apache.org/projects/flink/flink-docs-release-1.9/zh/concepts/runtime.html) 整理  
 该笔记内容&源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 # 任务和算子链
