--- a/flink-notes/2.0-Flink编程模型.md
+++ b/flink-notes/2.0-Flink编程模型.md
@@ -1,3 +1,15 @@
+目录结构
+=================
+
+   * [抽象级别](#抽象级别)
+   * [程序和数据流](#程序和数据流)
+   * [并发数据流](#并发数据流)
+   * [窗口](#窗口)
+   * [时间](#时间)
+   * [有状态的操作](#有状态的操作)
+   * [容错检查点](#容错检查点)
+   * [批处理操作](#批处理操作)
+
 该笔记内容&源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 # 抽象级别
 Flink提供了不同级别的抽象来开发 **流/批** 处理应用程序。
