--- a/flink-notes/0-笔记声明.md
+++ b/flink-notes/0-笔记声明.md
@@ -1,4 +1,7 @@
 flink，flink 入门，flink learning
+
+该系列使用scala语言开发，scala入门参考 [scala-advanced学习笔记](https://github.com/GourdErwa/scala-advanced)
+
 # 版本
 - Flink 1.9.1
 - JDK 1.8
