--- a/flink-notes/3.1-Flink Environment 概览.md
+++ b/flink-notes/3.1-Flink Environment 概览.md
@@ -1,4 +1,13 @@
 # Environment 概览
+该文档主要说明 Flink 作业执行时环境概念，根据不同作业情况选择不同的 `Environment`。  
+大多数API提供了静态方法创建对应 `Environment`，示例如下：
+```scala
+val bEnv: ExecutionEnvironment = ExecutionEnvironment.getExecutionEnvironment
+val btEnv: BatchTableEnvironment = BatchTableEnvironment.create(bEnv)
+
+val sEnv: StreamExecutionEnvironment = StreamExecutionEnvironment.getExecutionEnvironment
+val stEnv: StreamTableEnvironment = StreamTableEnvironment.create(sEnv)
+```
 
 ## 批处理（batch）-ExecutionEnvironment
 
@@ -21,7 +30,7 @@
 - `StreamContextEnvironment` 
 - `StreamPlanEnvironment` 
 
-## Table模式处理-TableEnvironment
+## Table 模式处理-TableEnvironment
 `TableEnvironment` 是创建 Table&SQL 的接口类，用于处理有界与无界数据。  
 主要职责：  
 - 连接外部系统数据源
@@ -32,5 +41,3 @@
 
 - `BatchTableEnvironment` Batch 处理模式的 Table ，主要处理 DataSet 与 Table 之间操作
 - `StreamTableEnvironment` streaming 处理模式的 Table ， 主要处理 DataStream 与 Table 之间操作
-
-    
