--- a/flink-notes/1.1-Flink概念：运行环境.md
+++ b/flink-notes/1.1-Flink概念：运行环境.md
@@ -8,7 +8,7 @@
    * [Savepoints](#savepoints)
    
 本内容主要参考 [flink-runtime](https://ci.apache.org/projects/flink/flink-docs-release-1.9/zh/concepts/runtime.html) 整理  
-该笔记内容&源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
+该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 # 任务和算子链
 分布式计算中，Flink 将算子（operator）的 subtask 链接（chain）成 task。    
 每个 task 由一个线程执行。    
