--- a/flink-notes/3.1-Flink Environment 概览.md
+++ b/flink-notes/3.1-Flink Environment 概览.md
@@ -1,3 +1,4 @@
+该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 # Environment 概览
 该文档主要说明 Flink 作业执行时环境概念，根据不同作业情况选择不同的 `Environment`。  
 大多数API提供了静态方法创建对应 `Environment`，示例如下：
