--- a/flink-notes/4.1-Flink DataSet压缩元素(Zipping Elements).md
+++ b/flink-notes/4.1-Flink DataSet压缩元素(Zipping Elements).md
@@ -1,5 +1,22 @@
-package io.gourd.flink.scala.games.batch
 
+该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
+
+
+在某些算法中，可能需要为数据集元素分配唯一标识符。[[org.apache.flink.api.scala.utils.DataSetUtils]] scala包装类  
+具体实现源码可参考 [DataSetUtils](https://github.com/apache/flink/blob/master//flink-java/src/main/java/org/apache/flink/api/java/utils/DataSetUtils.java)
+
+- **zipWithIndex**
+为元素分配连续的标签，接收数据集作为输入并返回 DataSet[(Long, T)] 2元组的新数据集。  
+此过程需要两步操作，首先是计数，然后是标记元素，由于计数同步，因此无法进行流水线处理。  
+替代方法 zipWithUniqueId 以流水线方式工作，当唯一的标签足够时，它是首选方法。
+  
+- **zipWithUniqueId**
+在许多情况下，可能不需要分配连续的标签。  
+zipWithUniqueId 以管道方式工作，加快了标签分配过程。  
+此方法接收一个数据集作为输入，并返回一个新的 DataSet[(Long, T)] 2元组数据集
+
+代码示例 [ZippingElements](https://github.com/GourdErwa/flink-advanced/blob/master/src/main/scala/io/gourd/flink/scala/games/batch/ZippingElements.scala) ：  
+```java
 import io.gourd.flink.scala.api.BatchExecutionEnvironmentApp
 
 /** 在某些算法中，可能需要为数据集元素分配唯一标识符。
@@ -37,3 +54,4 @@ object ZippingElements extends BatchExecutionEnvironmentApp {
   input.zipWithUniqueId.print()
 
 }
+```
