--- a/flink-notes/2.1-Flink类型系统.md
+++ b/flink-notes/2.1-Flink类型系统.md
@@ -16,7 +16,7 @@
    * [禁止回退到 Kryo](#禁止回退到-kryo)
    * [使用工厂方法定义类型信息](#使用工厂方法定义类型信息)
 
-该笔记内容&源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步  
+该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步  
 本内容主要参考 [flink-types_serialization](https://ci.apache.org/projects/flink/flink-docs-release-1.9/dev/types_serialization.html)
 # 数据类型以及序列化
 Apache Flink 以其独特的方式来处理数据类型以及序列化，这种方式包括它自身的类型描述符、泛型类型提取以及类型序列化框架。  
