--- a/flink-notes/4.1-Flink DataSet压缩元素(Zipping Elements).md
+++ b/flink-notes/4.1-Flink DataSet压缩元素(Zipping Elements).md
@@ -44,14 +44,34 @@ object ZippingElements extends BatchExecutionEnvironmentApp {
   import org.apache.flink.api.scala.utils.DataSetUtils
 
   input.zipWithIndex.print()
-
+/*
+(0,A)
+(1,B)
+(2,C)
+(3,D)
+(4,E)
+(5,F)
+(6,G)
+(7,H)
+ */
   println()
   /*
   在许多情况下，可能不需要分配连续的标签。
   zipWithUniqueId以管道方式工作，加快了标签分配过程。
   此方法接收一个数据集作为输入，并返回一个新的 DataSet[(Long, T)] 2元组数据集
+  
+  本机执行，未发生并行，实际情况参考分布式测试结果
    */
   input.zipWithUniqueId.print()
-
+  /*
+(0,A)
+(1,B)
+(2,C)
+(3,D)
+(4,E)
+(5,F)
+(6,G)
+(7,H)
+   */
 }
 ```
