--- a/flink-notes/4.0-Flink DataSet概览.md
+++ b/flink-notes/4.0-Flink DataSet概览.md
@@ -38,7 +38,7 @@
       * [Sort Partition（分区排序）](#sort-partition分区排序)
       * [First-n（前n个（任意）元素）](#first-n前n个任意元素)
 
-该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步   
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步   
 该笔记源码参考 [github/flink-advanced/transformations](https://github.com/GourdErwa/flink-advanced/blob/master/src/main/scala/io/gourd/flink/scala/games/batch/transformations)       
 # 示例程序
 [Batch.scala](https://github.com/GourdErwa/flink-advanced/blob/master/src/main/scala/io/gourd/flink/scala/games/batch/Batch.scala)
