--- a/flink-notes/4.1-Flink DataSet分配唯一标识符(Zipping Elements).md
+++ b/flink-notes/4.1-Flink DataSet分配唯一标识符(Zipping Elements).md
@@ -1,5 +1,5 @@
 
-该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 
 
 在某些算法中，可能需要为数据集元素分配唯一标识符。[[org.apache.flink.api.scala.utils.DataSetUtils]] scala包装类  
