--- a/flink-notes/4.4-Flink DataSet分布式缓冲(Distributed Cache).md
+++ b/flink-notes/4.4-Flink DataSet分布式缓冲(Distributed Cache).md
@@ -1,27 +1,18 @@
-package io.gourd.flink.scala.games.batch
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 
-import java.io.File
-
-import io.gourd.flink.scala.api.BatchExecutionEnvironmentApp
-import io.gourd.flink.scala.games.data.GameData.DataSet
-import io.gourd.flink.scala.games.data.pojo.UserLogin
-import org.apache.flink.api.common.functions.RichMapFunction
-import org.apache.flink.api.scala._
-import org.apache.flink.configuration.Configuration
-
-import scala.io.BufferedSource
+[官方文档](https://ci.apache.org/projects/flink/flink-docs-release-1.9/zh/dev/batch/#distributed-cache)，文章内容[源码](https://github.com/GourdErwa/flink-advanced/blob/master/src/main/scala/io/gourd/flink/scala/games/batch/DistributedCache.scala)  
 
 
+Flink提供了一个分布式缓存，类似于hadoop，可以使用户在并行函数中很方便的读取本地文件，并把它放在 taskManager 节点中，防止task重复拉取  
+
+执行机制如下：
+程序注册一个文件或者目录(本地或者远程文件系统，例如 hdfs 或者s3)，通过 `ExecutionEnvironment` 注册缓存文件并为它起一个名称
+当程序执行，Flink 自动将文件或者目录复制到所有 taskManager 节点的本地文件系统，仅会执行一次。
+用户可以通过这个指定的名称查找文件或者目录，然后从 taskManager 节点的本地文件系统访问它
+
+示例代码：
+```java
 /** 分布式缓存
-  * https://ci.apache.org/projects/flink/flink-docs-release-1.9/zh/dev/batch/#distributed-cache
-  *
-  * - Flink提供了一个分布式缓存，类似于hadoop，可以使用户在并行函数中很方便的读取本地文件，并把它放在 taskManager 节点中，防止task重复拉取
-  *
-  * - 此缓存的工作机制如下
-  * 程序注册一个文件或者目录(本地或者远程文件系统，例如 hdfs 或者s3)，通过ExecutionEnvironment注册缓存文件并为它起一个名称
-  * 当程序执行，Flink自动将文件或者目录复制到所有 taskManager 节点的本地文件系统，仅会执行一次。
-  * 用户可以通过这个指定的名称查找文件或者目录，然后从 taskManager 节点的本地文件系统访问它
-  *
   * =示例说明=
   * 分布式载入用户ID黑名单文件，针对用户登录数据匹配在黑名单ID及对应登录状态
   *
@@ -62,3 +53,4 @@ class BlacklistMap extends RichMapFunction[UserLogin, (String, String)] {
 
   override def close(): Unit = source.close()
 }
+```
