--- a/flink-notes/1.0-Flink概念：基础.md
+++ b/flink-notes/1.0-Flink概念：基础.md
@@ -22,7 +22,7 @@
       * [数据管道应用](#数据管道应用)
          * [典型的数据管道应用实例](#典型的数据管道应用实例)
          
-该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步            
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步            
 # 1.简单介绍
 Flink通过实现Google DataFlow 流式计算模型实现了高吞吐、低延迟、高性能兼具实时流式计算框架。    
 同时Flink支持高度容错的状态管理，防止状态在计算过程中因为系统异常而出现丢失，Flink周期性地通过分布式快照技术Checkpoints实现状态的持久化维护，使得即使在系统停机或者异常的情况下都能计算出正确的结果。
