--- a/flink-notes/3.0-Flink开发前准备与模拟数据集介绍.md
+++ b/flink-notes/3.0-Flink开发前准备与模拟数据集介绍.md
@@ -1,4 +1,4 @@
-该笔记专栏源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 # 开发前准备工作
 参考 [flink-advanced](https://github.com/GourdErwa/flink-advanced) 项目 README.MD 文件说明
 # 数据集说明
