--- a/flink-notes/4.2-Flink DataSet参数传递(Passing Parameters to Functions).md
+++ b/flink-notes/4.2-Flink DataSet参数传递(Passing Parameters to Functions).md
@@ -1,27 +1,18 @@
-package io.gourd.flink.scala.games.batch
 
-import io.gourd.flink.scala.api.MainApp
-import org.apache.flink.api.common.functions.RichFilterFunction
-import org.apache.flink.api.scala.{ExecutionEnvironment, _}
-import org.apache.flink.configuration.Configuration
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 
-/** 自定义参数在函数中运用
-  * https://ci.apache.org/projects/flink/flink-docs-release-1.9/dev/batch/#passing-parameters-to-functions
-  *
-  * [[UseConstructor]]    构造函数传递
-  * [[UseWithParameters]] withParameters 方法传递 支持传递给 UdfOperator||DataSource
-  * [[UseGlobally]]       setGlobalJobParameters 全局任务参数传递
-  *
-  * @author Li.Wei by 2019/11/4
-  */
+实际开发过程中我们需要在整个任务运行过程中传递自定义参数 。[官方文档](https://ci.apache.org/projects/flink/flink-docs-release-1.9/dev/batch/#passing-parameters-to-functions)，文章内容[源码](https://github.com/GourdErwa/flink-advanced/blob/master/src/main/scala/io/gourd/flink/scala/games/batch/Parameters.scala)
+
+Dataset定义：
+```
 trait Parameters extends MainApp {
   val env = ExecutionEnvironment.getExecutionEnvironment
   val toFilter = env.fromElements(1, 2, 3)
 }
-
-/**
-  * 构造函数传递
-  */
+```
+**构造函数传递**
+示例代码：
+```
 object UseConstructor extends Parameters {
 
   toFilter
@@ -29,11 +20,11 @@ object UseConstructor extends Parameters {
     .print()
 
 }
-
-/**
-  * RichFunction函数传递
-  * 自定义参数传递给 [[org.apache.flink.api.common.functions.RichFunction]]
-  */
+```
+**RichFunction函数传递**  
+自定义参数调用`withParameters`方法传递给 [[org.apache.flink.api.common.functions.RichFunction]]
+示例代码：
+```
 object UseWithParameters extends Parameters {
 
   val c = new Configuration()
@@ -50,10 +41,11 @@ object UseWithParameters extends Parameters {
   }).withParameters(c) // 自定义参数传递给 UdfOperator&DataSource
     .print()
 }
-
-/**
-  * 全局参数传递
-  */
+```
+**全局参数传递**
+自定义参数调用`setGlobalJobParameters`方法在执行配置中注册
+示例代码：
+```
 object UseGlobally extends Parameters {
   val conf = new Configuration()
   conf.setInteger("limit", 2)
@@ -73,3 +65,4 @@ object UseGlobally extends Parameters {
   })
     .print()
 }
+```
