--- a/flink-notes/4.3-Flink DataSet广播变量(Broadcast Variables).md
+++ b/flink-notes/4.3-Flink DataSet广播变量(Broadcast Variables).md
@@ -1,16 +1,12 @@
-package io.gourd.flink.scala.games.batch
+该笔记专栏内容与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced/tree/master/flink-notes) 同步，源码与 [github/flink-advanced](https://github.com/GourdErwa/flink-advanced) 同步
 
-import io.gourd.flink.scala.api.BatchExecutionEnvironmentApp
-import io.gourd.flink.scala.games.data.GameData.DataSet
-import io.gourd.flink.scala.games.data.pojo.UserLogin
-import org.apache.flink.api.common.functions.RichMapFunction
-import org.apache.flink.api.scala._
-import org.apache.flink.configuration.Configuration
+[官方文档](https://ci.apache.org/projects/flink/flink-docs-release-1.9/zh/dev/batch/#broadcast-variables)，文章内容[源码](https://github.com/GourdErwa/flink-advanced/blob/master/src/main/scala/io/gourd/flink/scala/games/batch/Broadcast.scala)  
 
+重要信息：一台计算机上的并行任务之间共享广播变量数据结构。 修改其内部状态的任何访问都需要由调用者手动同步
+
+示例代码：
+```java
 /** 广播变量
-  * https://ci.apache.org/projects/flink/flink-docs-release-1.9/zh/dev/batch/#broadcast-variables
-  *
-  * 重要信息：一台计算机上的并行任务之间共享广播变量数据结构。 修改其内部状态的任何访问都需要由调用者手动同步
   *
   * @author Li.Wei by 2019/11/4
   */
@@ -27,6 +23,7 @@ object Broadcast extends BatchExecutionEnvironmentApp {
     .withBroadcastSet(roleLoginDs, "roleLoginDataSet") // 将数据集作为广播集
     .first(10).withForwardedFields()
     .print()
+    
   /* print
   (none,LOGOUT)
   (2|2946,LOGIN)
@@ -58,3 +55,4 @@ class MyBroadcastMap extends RichMapFunction[UserLogin, (String, String)] {
     if (broadcastSet.exists(_ == value.uid)) (value.uid, value.status) else ("none", value.status)
 
 }
+```
